--- a/package.json
+++ b/package.json
@@ -13,20 +13,25 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bson": "^4.2.0",
     "@types/express": "^4.17.21",
+    "@types/mongodb": "^4.0.7",
+    "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.10.4",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   },
   "dependencies": {
-    "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongodb": "^5.9.1",
     "mongoose": "^8.0.2",
-    "multer": "^1.4.5-lts.1",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.9.7",
     "uuid": "^9.0.1"
   }
